crates/tests/libs/bindgen/data/error/repr_must_be_integer/input.rdl

#[winrt]
mod Test {
    #[repr(bool)]
    enum AsyncStatus {
        Started = 0,
    }
}
        